<resources>
    <!--login-->
    <string name="app_name">玉玄宫</string>
    <string name="login_edt_name_hint">账号</string>
    <string name="login_edt_psw_hint">密码</string>
    <string name="login_fg_psw">忘记密码</string>
    <string name="login">登&#160;录</string>
    <string name="has_send">已发送</string>
    <string name="captcha_get_error">请获取验证码</string>
    <string name="captcha_not_correct">验证码输入不正确</string>
    <string name="phone_not_correct">请输入手机号</string>
    <string name="psw_not_correct">请输入密码</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="submit_success">提交成功</string>
    <string name="open_gps_title">定位服务</string>
    <string name="open_gps_message">请打开GPS定位</string>

    <!--main-->
    <string name="start">开始</string>
    <string name="cure">治疗</string>
    <string name="record">记录</string>
    <string name="member">成员</string>
    <string name="list">列表</string>
    <string name="main_home">首页</string>
    <string name="main_watch">智联</string>
    <string name="main_setting">设置</string>

    <string name="app_update">软件更新</string>
    <string name="downloading">正在下载</string>
    <string name="cancel">取消</string>
    <string name="play">播放</string>
    <string name="wifi_connect">链接Wi-Fi网络</string>

    <!--member list-->
    <string name="back">返回</string>
    <string name="member_list">成员列表</string>
    <string name="member_list_edt_search_hint">请输入</string>
    <string name="item_member_num">编号%s</string>
    <string name="go_cure">去治疗</string>
    <string name="please_input_info">请填写完整信息</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="delete">删除</string>

    <!--cure detail-->
    <string name="cure_detail_title">治疗详情</string>
    <string name="retry_cure">再次治疗</string>
    <string name="choose_cure_method">选择治疗方式</string>
    <string name="cure_person">治疗人：%s</string>
    <string name="cure_person_birthday">治疗人生日：%s</string>
    <string name="sorting_method">治疗方式：%s</string>
    <string name="sorting_head">治疗头：%s</string>
    <string name="magnetic_field_intensity">磁场强度：%s</string>
    <string name="best_acupoint">对应穴位：%s</string>
    <string name="treat_time_duration">治疗时长：%d分钟</string>
    <string name="treat_time">治疗时间：%s</string>
    <string name="little">低</string>
    <string name="middle">中</string>
    <string name="high">高</string>

    <!--choose sorting method-->
    <string name="choose_sorting_method">选择治疗方式</string>

    <string name="pain">疼痛</string>
    <string name="pain_sec">温热类</string>
    <string name="inflammation">炎症</string>
    <string name="inflammation_sec">痹症类</string>
    <string name="the_lump">肿块</string>
    <string name="the_lump_sec">气滞血瘀\n类</string>
    <string name="three_high">三高症</string>
    <string name="three_high_sec">痰湿类</string>

    <!--choose sorting method process-->
    <string name="next">下一步</string>

    <string name="title_pain">选择疼痛治疗方式</string>
    <string name="pain_little">轻度\n疼痛</string>
    <string name="pain_middle">中度\n疼痛</string>
    <string name="pain_high">重度\n疼痛</string>

    <string name="title_inflammation">选择炎症治疗方式</string>
    <string name="inflammation_little">轻度\n炎症</string>
    <string name="inflammation_middle">中度\n炎症</string>
    <string name="inflammation_high">重度\n炎症</string>

    <string name="title_the_lump">选择肿块治疗方式</string>
    <string name="the_lump_little">轻度\n肿块</string>
    <string name="the_lump_middle">中度\n肿块</string>
    <string name="the_lump_high">重度\n肿块</string>

    <string name="title_three_high">选择三高治疗方式</string>
    <string name="high_blood_pressure">高血压</string>
    <string name="high_blood_pressure_normal">高血压</string>
    <string name="diabetes">糖尿病</string>
    <string name="hyperlipidemia">高血脂</string>
    <string name="hyperlipidemia_normal">高血脂</string>
    <string name="title_high_blood_pressure">选择高血压方式</string>
    <string name="high_blood_pressure_little">轻度\n高血压</string>
    <string name="high_blood_pressure_middle">中度\n高血压</string>
    <string name="high_blood_pressure_high">重度\n高血压</string>
    <string name="title_diabetes">选择糖尿病方式</string>
    <string name="diabetes_little">轻度\n糖尿病</string>
    <string name="diabetes_middle">中度\n糖尿病</string>
    <string name="diabetes_high">重度\n糖尿病</string>
    <string name="title_hyperlipidemia">选择高血脂方式</string>
    <string name="hyperlipidemia_little">轻度\n高血脂</string>
    <string name="hyperlipidemia_middle">中度\n高血脂</string>
    <string name="hyperlipidemia_high">重度\n高血脂</string>

    <string name="title_comb_head">选择治疗头</string>
    <string name="comb_head_left">左\n治疗头</string>
    <string name="comb_head_double">双\n治疗头</string>
    <string name="comb_head_right">右\n治疗头</string>

    <string name="comb_head_left3">左治疗头</string>
    <string name="comb_head_double3">双治疗头</string>
    <string name="comb_head_right3">右治疗头</string>

    <string name="comb_head_left2">左</string>
    <string name="comb_head_right2">右</string>

    <string name="title_magnetic_field_intensity">选择磁场强度</string>
    <string name="magnetic_field_intensity_high">高</string>
    <string name="magnetic_field_intensity_middle">中</string>
    <string name="magnetic_field_intensity_little">低</string>

    <!--your current best acupoint-->
    <string name="title_current_acupoint">您当前的对应穴位 </string>
    <string name="error_text">1、请检查磁头连接线\n2、请联系我们\n售后电话：086-0757-83368806</string>
    <string name="error_tips">错误提示</string>
    <string name="i_know">知道了</string>

    <!--sorting-->
    <string name="title_sorting">正在治疗</string>
    <string name="stop">停止</string>
    <string name="confirm_title">您确定要停止治疗吗?</string>
    <string name="pause">暂停</string>
    <string name="visitor">游客</string>

    <!--cure record-->
    <string name="title_cure_record">治疗记录</string>
    <string name="modify_cure_method">修改治疗方式</string>

    <!--choose cure person-->
    <string name="title_choose_cure_person">选择治疗人</string>
    <string name="skip_next">跳过,下一步</string>
    <string name="choose_member_please">请选择成员</string>

    <!--setting fragment-->
    <string name="exit_login">退出登陆</string>
    <string name="setting_my_info">我的信息</string>
    <string name="setting_modify_psw">修改密码</string>
    <string name="setting_audio_tips">按键音</string>
    <string name="setting_multi_language">语言设置</string>
    <string name="setting_my_devices">我的设备</string>
    <string name="setting_helper">使用帮助</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_feedback">用户反馈</string>

    <!--watch fragment-->
    <string name="watch_un_connect">未连接</string>
    <string name="un_connect">未连接</string>
    <string name="measure">测量</string>
    <string name="measureing">测量中</string>
    <string name="battery">电量:</string>
    <string name="measure_record">测量记录</string>
    <string name="blood_pressure">血压 %d-%dmmhg</string>
    <string name="heart_rate">心率 %dbpm</string>
    <string name="blood_oxygen">血氧 %dSpo2</string>
    <string name="measure_detail">测量详情</string>

    <!--setting my info-->
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="phone">手机</string>
    <string name="confirm">确定</string>
    <string name="avatar">头像</string>

    <!--setting modify psw-->
    <string name="phone_num">手机号</string>
    <string name="verify_code">验证码</string>
    <string name="psw">密码</string>

    <!--setting language-->
    <string name="language_cn">中文简体</string>
    <string name="language_tw">中文繁体</string>
    <string name="language_english">English</string>

    <!--setting my devices-->
    <string name="setting_my_device_name">设备名：%s</string>
    <string name="setting_my_device_num">设备号：%s</string>
    <string name="setting_my_device_activated">已激活</string>

    <!--setting about us-->
    <string name="about_us_version">版本：%s</string>
    <string name="about_us_company_phone">公司电话：%s</string>
    <string name="about_us_company_email">公司邮箱：%s</string>
    <string name="about_us_company_webchat_public">公众号：%s</string>
    <string name="about_us_company_address">公司地址：%s</string>

    <!--setting feedback-->
    <string name="setting_feedback_hint">请输入您的反馈内容</string>

    <!--add or modify member-->
    <string name="title_add_modify_member">修改/添加成员</string>
    <string name="add_member">添加</string>

    <!--choose birthday-->
    <string name="title_choose_birthday">输入生日</string>
    <string name="calendar">公历</string>
    <string name="lunar_calendar">农历</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>

    <!--watch connect-->
    <string name="connected_devices">已连接设备</string>
    <string name="nearby_devices">附近设备</string>
    <string name="my_devices">我的设备</string>
    <string name="connect">已连接</string>

    <!--measure detail-->
    <string name="measure_average_heart_rate">平均心率</string>
    <string name="measure_blood_pressure">血压</string>
    <string name="measure_blood_oxygen">血氧</string>
    <string name="count_minutes">次/分钟</string>
    <string name="heart_rate_ok">心率正常</string>
    <string name="heart_rate_less">心率过低</string>
    <string name="heart_rate_more">心率过高</string>
    <string name="heart_rate_desc">安静状态下，正常人的心率为60-100次/分钟。运动是心率应控制118-156次/分钟。</string>
    <string name="blood_pressure_unit">mmHg</string>
    <string name="blood_pressure_ok">血压正常</string>
    <string name="blood_pressure_less">血压偏低</string>
    <string name="blood_pressure_high">血压偏高</string>
    <string name="blood_pressure_desc">
                                  正常成人安静状态下的血压范围较稳定，一般人的血压正常值为90～140mmHg，低压60～90mmHg。

                        </string>
    <string name="blood_oxygen_ok">血氧正常</string>
    <string name="blood_oxygen_less">血氧偏低</string>
    <string name="blood_oxygen_unit">%</string>
    <string name="blood_oxygen_desc">
                                  正常动脉血氧饱和度约94～100%，混合静脉血氧饱和度约75%。

                        </string>

    <string name="connect_title">连接</string>
    <string name="prompt">提示</string>
    <string name="allow_permissions">请允许App使用定位权限</string>
    <string name="go_settings">去设置</string>
    <string name="tip_watching">正在测量中，请等待测量完成</string>
</resources>
