<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="36dp"
    android:layout_marginRight="36dp"
    android:background="@drawable/shape_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:text="@string/error_tips"
        android:textColor="#363636"
        android:textSize="@dimen/account_title_text_size"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E1E1E1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:gravity="left"
        android:includeFontPadding="false"
        android:text="@string/error_text"
        android:textColor="#363636"
        android:textSize="26sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDialogConfirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/i_know"
            android:textColor="@color/color_login_btn"
            android:textSize="@dimen/login_btn_text_size"/>

    </LinearLayout>

</LinearLayout>