<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_main_watch">

    <TextView
        android:id="@+id/tvSettingMyInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/setting_my_info"
        android:textColor="@color/color_login_btn"
        android:textSize="@dimen/login_edt_text_size"
        android:textStyle="bold"/>

    <include
        layout="@layout/layout_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/back_btn_margin_left"
        android:layout_marginBottom="@dimen/back_btn_margin_bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/ivSettingMyInfoAvatar"
                android:layout_width="148dp"
                android:layout_height="148dp"
                android:layout_centerInParent="true"
                android:background="@mipmap/ic_setting_avatar_bg"
                android:scaleType="centerInside"
                app:civ_border="false"/>

            <TextView
                android:id="@+id/tvAddModifyMemberAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/avatar"
                android:textColor="@color/color_login_btn"
                android:textSize="@dimen/login_edt_text_size"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_edit_height"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="64dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="13dp"
                android:layout_weight="1"
                android:background="@mipmap/ic_setting_myinfo_edt_bg"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/color_login_btn"
                android:textColorHint="@color/setting_my_info_text_color"
                android:textSize="@dimen/login_edt_text_size"/>

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="13dp"
                android:layout_weight="1"
                android:background="@mipmap/ic_setting_myinfo_edt_bg"
                android:gravity="center_vertical"
                android:hint="@string/gender"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/color_login_btn"
                android:textColorHint="@color/setting_my_info_text_color"
                android:textSize="@dimen/login_edt_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_edit_height"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="31dp"
            android:layout_marginRight="64dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBirthday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="13dp"
                android:layout_weight="1"
                android:background="@mipmap/ic_setting_myinfo_edt_bg"
                android:gravity="center_vertical"
                android:hint="@string/birthday"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/color_login_btn"
                android:textColorHint="@color/setting_my_info_text_color"
                android:textSize="@dimen/login_edt_text_size"/>

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="13dp"
                android:layout_weight="1"
                android:background="@mipmap/ic_setting_myinfo_edt_bg"
                android:gravity="center_vertical"
                android:hint="@string/phone"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/color_login_btn"
                android:textColorHint="@color/setting_my_info_text_color"
                android:textSize="@dimen/login_edt_text_size"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="@dimen/small_btn_width"
            android:layout_height="@dimen/small_btn_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:background="@mipmap/ic_login_btn_bg"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/color_login_btn"
            android:textSize="@dimen/login_btn_text_size"/>

    </LinearLayout>

</RelativeLayout>