<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="36dp"
    android:layout_marginRight="36dp"
    android:background="@drawable/shape_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:text="@string/app_update"
        android:textColor="#363636"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:textColor="#363636"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/tvDialogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:textColor="#363636"
        android:textSize="26sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="#E1E1E1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDialogCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/cancel"
            android:textColor="#4A4A4A"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tvDialogConfirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/confirm"
            android:textColor="@color/color_login_btn"
            android:textSize="22sp"/>

    </LinearLayout>

</LinearLayout>